--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="./css/styles.css">
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -16,11 +17,7 @@
         </select>
     </header>
     <main>
-        <div id="photo-template">
-            <h2></h2>
-            <img src="" alt="">
-            <p></p>
-        </div>
+
     </main>
     <footer>
         &copy; 2018 Code Fellows
