--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
 <body>
     <header>
         <h1>The Gallery of Horns</h1>
+        <nav>
+            <ul>
+                <li><a href="">Page 1</a></li>
+                <li><a href="">Page 2</a></li>
+            </ul>
+        </nav>
         <select>
             <option value="default">Filter by Keyword</option>
         </select>
+
     </header>
     <main>
 
