--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="./css/styles.css">
     <title>The Gallery of Horns</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
