--- a/index.html
+++ b/index.html
@@ -13,22 +13,32 @@
     <header>
         <h1>The Gallery of Horns</h1>
         <nav>
-            <ul>
-                <li><a href="">Page 1</a></li>
-                <li><a href="">Page 2</a></li>
-            </ul>
+            <button>Page 1</button>
+            <button>Page 2</button>
         </nav>
         <select>
             <option value="default">Filter by Keyword</option>
         </select>
 
     </header>
-    <main>
+    <template id="template" type="x-tmpl-mustache">
+        <div>
 
+            <h2>{{title}}</h2>
+            <img src="{{image_url}}" alt="{{description}}">
+            <p>
+                {{description}}<br>
+                {{keyword}} <br>
+                {{keyword}}
+            </p>
+        </div>
+    </template>
+    <main>
     </main>
     <footer>
-        &copy; 2018 Code Fellows
+        &copy; 2021 Code Fellows
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/4.1.0/mustache.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
