--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <img src="{{image_url}}" alt="{{description}}">
             <p>
                 {{description}}<br>
-                {{keyword}} <br>
-                {{keyword}}
+                Type: {{keyword}} <br>
+                Number of horns: {{horns}}
             </p>
         </div>
     </template>
